# src/domain/user/dto/user-service-response.dto.ts
@@ -1,0 +1,17 @@
+import { User } from '@prisma/client';
+
+export class UserServiceResponseDto {
+  id: number;
+  email: string;
+  name: string;
+  createdAt: Date;
+  updatedAt: Date;
+
+  constructor(user: User) {
+    this.id = user.id;
+    this.email = user.email;
+    this.name = user.name;
+    this.createdAt = user.createdAt;
+    this.updatedAt = user.updatedAt;
+  }
+}
